k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: test.my.local
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: external-ping
                port:
                  number: 8080
          - path: /name
            pathType: Prefix
            backend:
              service:
                name: external-ping
                port:
                  number: 8080
    - host: test.my.local2
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: external-pong
                port:
                  number: 8080
          - path: /name
            pathType: Prefix
            backend:
              service:
                name: external-pong
                port:
                  number: 8080
